--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,46 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<p id = "notice"><%= notice %></p>
+<%= render 'users/user_sidebar', user: current_user %>
+<%= render 'books/book_sidebar', book: @book %>
+
+<div class="col-xs-9">
+      <h2>Book detail</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td>
+                <%= attachment_image_tag @show_book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+                <br><%= link_to user_path(@show_book.user.id) do %>
+                  <%= @show_book.user.name%>
+                <% end %>
+              </td>
+              <td>
+                <%=  @show_book.title  %>
+              </td>
+              <td>
+                <%= @show_book.body %>
+              </td>
+              <td>
+                <% if @show_book.user == current_user %>
+                  <%= link_to "Edit", edit_book_path(@show_book.id), class:"btn-sm btn-success" %>
+                <% end %>
+              </td>
+              <td>
+                <% if @show_book.user == current_user %>
+                  <%= link_to "Destroy", book_path, method: :delete, "data-confirm" => "本当に消しますか？", class:"btn-sm btn-danger" %>
+                <% end %>
+              </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
