--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h1>Editing Book</h1>
+      <%= form_for (@book) do |f|%>
+        <label for="book_title">Title</label>
+        <br><%= f.text_field :title %>
+        <br><label for="book_opinion">Opinion</label>
+        <br><%= f.text_area :body %>
+        <div class="action">
+          <%= f.submit 'Update Book' %>
+        </div>
+      <% end %>
+      <%= link_to 'Show', book_path(@book.id) %>
+      <%= link_to 'Back', books_path %>
+    </div>
+  </div>
+</div>
