--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,27 +18,27 @@
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <%if user_signed_in? %>
-          <li class="">
-              <%= link_to "Home", user_path(@user), class:"glyphicon glyphicon-home" %>
+            <li class="">
+              <%= link_to "Home", user_path(current_user), class:"glyphicon glyphicon-home" %>
             </li>
             <li class="">
               <%= link_to "Users", users_path, class:"glyphicon glyphicon-user"%>
              </li>
             <li class="">
-              <%= link_to "Books", "#", class:"glyphicon glyphicon-book"%>
+              <%= link_to "Books", books_path, class:"glyphicon glyphicon-book"%>
             </li> 
             <li class=""> 
-              <%= link_to "logout", destroy_user_session_path(current_user), :method => :delete, class:"glyphicon glyphicon-log-out"%>
+              <%= link_to "logout", destroy_user_session_path, :method => :delete, class:"glyphicon glyphicon-log-out"%>
             </li>
           <% else %>
-          <li class="">
+            <li class="">
               <%= link_to "Home", root_path, class:"glyphicon glyphicon-home" %>
             </li>
             <li class="">
-              <%= link_to "About", about_path, class:"glyphicon glyphicon-link"%>
+              <%= link_to "About", home_about_path, class:"glyphicon glyphicon-link"%>
             </li>
             <li class="">
-              <%= link_to "sigin up", new_user_registration_path, class:"glyphicon glyphicon-edit"%>
+              <%= link_to "Sign up", new_user_registration_path, class:"glyphicon glyphicon-edit"%>
             </li>
             <li class="">
               <%= link_to "login", new_user_session_path, class:"glyphicon glyphicon-log-in"%>
@@ -51,6 +51,10 @@
     </div>
   </header>
     <div class="body">
+    <%= render 'layouts/error_messages', record: @book %>
+    <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+  <% end %>
       <%= yield %>
     </div>
 
