--- a/app/views/users/_user_sidebar.html.erb
+++ b/app/views/users/_user_sidebar.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-3">
       <h2>User info</h2>
-      <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg' %>
+      <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size: "100x100" %>
       <table class="table">
         <tbody>
           <tr></tr>
