--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,8 @@
   <p id="notice"><%= notice %></p>
   <h2>User info</h2>
 
+  <%= render 'layouts/error_messages', record: @user %>
+
 <%= form_for (@user) do |f| %>
   <label for="user_name">Name</label>
   <%= f.text_field :name  %>
