--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<%= render 'users/user_sidebar', user: current_user %>
-<%= render 'books/book_sidebar', user: @book %>
-
-
-
+<%= render 'users/user_sidebar', user: @user %>
+<%= render 'books/book_sidebar', book: @book %>
 
     <div class="col-xs-9">
-      <h2>Book</h2>
+      <h2>Books</h2>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
@@ -18,17 +15,21 @@
           </tr>
         </thead>
         <tbody>
+        <% @books.each do |book| %>
          <tr>
           <td>
-            <%#画像リンク（プロフィール）%>
+            <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
           </td>
           <td>
-            <%# 本のタイトル %>
+            <%= link_to book_path(book.id) do %>
+              <%= book.title %>
+            <% end %>
           </td>
           <td>
-            <%# 本の感想 %>
+            <%= book.body %>
           </td>
          </tr>
+         <% end %>
         </tbody>
       </table>
     </div>
